--- a/wl.base.css
+++ b/wl.base.css
@@ -174,6 +174,9 @@ body{-webkit-overflow-scrolling: touch;overflow-scrolling: touch;line-height: 1.
 .w-50w{
 	width: 50%;
 }
+.w-75w{
+	width: 75%;
+}
 .w-100w{
 	width: 100%;
 }
@@ -191,7 +194,7 @@ body{-webkit-overflow-scrolling: touch;overflow-scrolling: touch;line-height: 1.
 }
 /* 页面最大和最小宽度 */
 .w-mw{
-	max-width: 640px;
+	max-width: 750px;
 	min-width: 320px;
 }
 .w-tl{
@@ -296,6 +299,9 @@ body{-webkit-overflow-scrolling: touch;overflow-scrolling: touch;line-height: 1.
 	background-position: center;
 	-webkit-background-size: cover;
 	background-size: cover;
+}
+.w-bgctp{
+	background-color: transparent;
 }
 
 /* 下面是项目里面公用的颜色，自行添加 */
