--- a/wl.base.css
+++ b/wl.base.css
@@ -2,15 +2,15 @@
  * @Author: smileboyi 
  * @Date: 2018-04-10 13:43:31 
  * @Last Modified by: smileboyi
- * @Last Modified time: 2018-04-10 13:55:49
+ * @Last Modified time: 2018-06-24 23:10:42
  */
 
-img{border:none;max-width:100%;vertical-align:middle;}
 body,p,form,input,button,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6{margin:0;padding:0;list-style:none;overflox:hidden}
 h1,h2,h3,h4,h5,h6{font-size:100%;}
 input,textarea{-webkit-user-select:text;-ms-user-select:text;user-select:text;-webkit-appearance:none;}
-table{border-collapse:collapse;}
 input,select,textarea{outline:none;border:none;background:none;}
+img{border:none;max-width:100%;vertical-align:middle;}
+table{border-collapse:collapse;}
 a:link,a:active{text-decoration:none;}
 a:visited{text-decoration:none;}
 a{text-decoration:none;}
@@ -22,25 +22,30 @@ input,button,select,textarea{outline:none}
 textarea{resize:none}
 /* 添加内阴影 */
 input:-webkit-autofill,select:-webkit-autofill {
-    -webkit-box-shadow: 0 0 0px 1000px white  inset !important;
-    box-shadow: 0 0 0px 1000px white  inset !important;
+	-webkit-box-shadow: 0 0 0px 1000px white  inset !important;
+	box-shadow: 0 0 0px 1000px white  inset !important;
 }
 /* 去掉number默认样式 */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button{
-    -webkit-appearance: none !important;
-    margin: 0; 
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button{
+	-webkit-appearance: none !important;
+	margin: 0; 
 }
 /* 其他样式 */
-html{min-height: 100%;-webkit-transition:font-size 0.2s ease-out;}
-body{width: 100%;min-height: 100%;}
+html{min-height: 100%;transition:font-size 0.2s ease-out;}
 html::-webkit-scrollbar{display: none;}
+body{width: 100%;min-height: 100%;-webkit-overflow-scrolling: touch;line-height: 1.6;font-family: -apple-system-font,Helvetica Neue,sans-serif}
+input[type="checkbox"], input[type="radio"] { box-sizing: border-box; padding: 0; }
+input[type="search"] { -webkit-appearance: textfield; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration { -webkit-appearance: none; }
+input::-moz-placeholder, textarea::-moz-placeholder { color: #cccccc; }
+input:-ms-input-placeholder, textarea:-ms-input-placeholder { color: #cccccc; }
+input::-webkit-input-placeholder, textarea::-webkit-input-placeholder { color: #cccccc; }
 div,span,a,img{-webkit-user-select: none;-moz-user-select: none;}
 a,img{-webkit-touch-callout: none;}
-body{-webkit-overfloscrolling: touch;line-height: 1.6;font-family: -apple-system-font,Helvetica Neue,sans-serif}
 /****** 新增重置样式 end ********/
 
-/* 字根屏幕适配，移动端可以换成flexible.js */
+/* 字根屏幕适配，移动端可以换成flexible.js或rem.js */
 /* 这里设定限制最大了，如果觉得小了可以去掉往上继续添加 */
 @media (min-width: 1200px) {html {font-size: 36px;}}
 @media (max-width: 1200px) {html {font-size: 36px;}}
@@ -222,7 +227,7 @@ body{-webkit-overfloscrolling: touch;line-height: 1.6;font-family: -apple-system
 	height: 100%;
 }
 /* 手机页面最大和最小宽度，pc端更多是响应式，就没有 */
-.mw--app{
+.h5w{
 	max-width: 750px;
 	min-width: 320px;
 }
@@ -267,6 +272,12 @@ body{-webkit-overfloscrolling: touch;line-height: 1.6;font-family: -apple-system
 .fi{
 	font-style:italic;
 }
+/* 隐藏，占据的空间不受影响，能被阅读设备识别 */
+.pacr{
+	/* 或者搭配fixed */
+	position: absolute;
+	clip: rect(0,0,0,0);
+}
 /* 用于隐藏文字，显示图片 */
 .notext {
 	text-align: left;
@@ -285,8 +296,22 @@ body{-webkit-overfloscrolling: touch;line-height: 1.6;font-family: -apple-system
 .tr{
 	text-align: right;
 }
+/* 2端对齐 */
 .tj{
+	font-size: 0;
 	text-align:justify;
+	text-justify: inter-ideograph;
+}
+.tj::after{
+	content: "";
+	display: inline-block;
+	width: 100%;
+}
+.ttu{
+	text-transform: uppercase;
+}
+.ttl{
+	text-transform: lowercase;
 }
 /* 单行文字溢出虚点显示，多行的时候再结合其他样式*/
 /* 因为单元格的流动性，使得文字根本就不存在溢出这种说法，需要结合table-layout: fixed使用 */
@@ -296,19 +321,19 @@ body{-webkit-overfloscrolling: touch;line-height: 1.6;font-family: -apple-system
 	word-wrap: normal;
 	overflow:hidden;
 }
+.norp{
+	background-repeat: no-repeat;
+}
+/* 针对单个小图标（大部分），或者图片 */
+.icon{
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+}
 .contain{
 	background-size: contain;
 }
 .cover{
-	background-size: cover;
-}
-.norp{
-	background-repeat: no-repeat;
-}
-/* 针对单个小图标 */
-.icon{
-	background-repeat: no-repeat;
-	background-position: center;
 	background-size: cover;
 }
 /* css3过渡动画效果 */
@@ -324,6 +349,14 @@ body{-webkit-overfloscrolling: touch;line-height: 1.6;font-family: -apple-system
 }
 .ovs{
 	overflow: scroll;
+}
+.ovxs{
+	overflow-x: scroll;
+	overflow-y: hidden;
+}
+.ovys{
+	overflow-x: hidden;
+	overflow-y: scroll;
 }
 .nobd{
 	border: none;
@@ -347,7 +380,7 @@ body{-webkit-overfloscrolling: touch;line-height: 1.6;font-family: -apple-system
 	-webkit-text-size-adjust: none;
 	text-size-adjust: none;
 }
-/* 一般使用伪类放图标 */
+/* 一般使用伪类放图标，i表示icon，一般也用<i>展示图标 */
 .ai:after,
 .bi:before {
 	content: '';
@@ -368,6 +401,31 @@ body{-webkit-overfloscrolling: touch;line-height: 1.6;font-family: -apple-system
 }
 .bdd{
 	border:1px solid #ddd;
+}
+/* 代替br换行 */
+.wsp::after{
+	/* \A表示换行 */
+	content: '\A';
+	white-space: pre;
+}
+/* ...动画加载(不适合响应式) */
+.dot{
+	display: inline-block;
+	height: 1em;
+	line-height: 1;
+	text-align: left;
+	vertical-align: -.25em;
+	overflow: hidden;
+}
+.dot::before{
+	display: inline-block;
+	content: '...\A..\A.';
+	white-space: pre-wrap;
+	animation: dot 3s infinite step-start both;
+}
+@keyframes dot{
+	33% { transform: translateY(-2em) }
+	66% { transform: translateY(-1em) }
 }
 
 /**
