--- a/wl.base.css
+++ b/wl.base.css
@@ -2,10 +2,10 @@
  * @Author: smileboyi 
  * @Date: 2018-04-10 13:43:31 
  * @Last Modified by: smileboyi
- * @Last Modified time: 2018-08-23 12:54:39
+ * @Last Modified time: 2018-11-19 17:34:08
  */
 
-body,p,form,input,button,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6{margin:0;padding:0;list-style:none;overflox:hidden}
+body,p,form,input,button,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6{margin:0;padding:0;list-style:none;}
 h1,h2,h3,h4,h5,h6{font-size:100%;}
 input,textarea{-webkit-user-select:text;-ms-user-select:text;user-select:text;-webkit-appearance:none;}
 input,select,textarea{outline:none;border:none;background:none;}
@@ -44,6 +44,19 @@ input::-webkit-input-placeholder, textarea::-webkit-input-placeholder { color: #
 div,span,a,img{-webkit-user-select: none;-moz-user-select: none;}
 a,img{-webkit-touch-callout: none;}
 /****** 新增重置样式 end ********/
+
+/* 定义css变量 */
+:root {
+	--light: #f4f5f6;
+	--dark: #253035;
+	--secondary: #ff4081;
+	--primary: #2196f3;
+	--success: #4caf50;
+	--warning: #fdd835;
+	--info: #2196f3;
+	--error: #f44336;
+	--disabled: #e6e6e6;
+}
 
 /* 字根屏幕适配，移动端可以换成flexible.js或rem.js */
 /* 这里设定限制最大了，如果觉得小了可以去掉往上继续添加 */
@@ -181,14 +194,12 @@ a,img{-webkit-touch-callout: none;}
 }
 /* 横向flex */
 .flex{
-	display: -webkit-flex;
 	display: flex;
 	-webkit-justify-content: space-between;
 	justify-content: space-between;
 }
 /* 纵向flex(圣杯) */
 .grail{
-	display: -webkit-flex;
 	display: flex;
 	flex-direction: column;
 	align-content: space-between;
@@ -199,7 +210,6 @@ a,img{-webkit-touch-callout: none;}
 	display: none;
 }
 .fe{
-	-webkit-flex: 1;
 	flex: 1;
 }
 .w20{
@@ -329,27 +339,39 @@ a,img{-webkit-touch-callout: none;}
 	color: transparent;
 	text-shadow: 0 0 5px rgba(0,0,0,0.5);
 }
-/* 针对单个小图标*/
+/* 针对单个(背景和图标) */
 .icon{
 	display: inline-block;
-	width: 100%;
-	height: 100%;
 	background-repeat: no-repeat;
-	background-position: center;
+	background-position: center center;
 	background-size: cover;
 }
-/* 针对大图片，常用于背景 */
-.bg{
+/* 多个，用于雪碧图 */
+.icons1{
 	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
+	background-position: center center;
+	background-size: 100% auto;
 }
-.contain{
+.icons2{
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: auto 100%;
+}
+.contain1{
 	background-size: contain;
 }
-.cover{
+.contain2 {
+  -o-object-fit: contain;
+	object-fit: contain;
+}
+.cover1{
 	background-size: cover;
 }
+.cover2 {
+  -o-object-fit: cover;
+	object-fit: cover; 
+}
+
 /* css3过渡动画效果 */
 .trans{
 	-webkit-transition:all 0.3s;	
@@ -374,6 +396,21 @@ a,img{-webkit-touch-callout: none;}
 }
 .nobd{
 	border: none;
+}
+.z5{
+	z-index: 5;
+}
+.z6{
+	z-index: 6;
+}
+.z7{
+	z-index: 7;
+}
+.z8{
+	z-index: 8;
+}
+.z9{
+	z-index: 9;
 }
 .z10{
 	z-index: 10;
