--- a/wl.base.css
+++ b/wl.base.css
@@ -2,7 +2,7 @@
  * @Author: smileboyi 
  * @Date: 2018-04-10 13:43:31 
  * @Last Modified by: smileboyi
- * @Last Modified time: 2018-11-20 15:48:47
+ * @Last Modified time: 2019-12-02 21:31:43
  */
 
 body,p,form,input,button,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6{margin:0;padding:0;list-style:none;}
@@ -21,7 +21,7 @@ li,ol{list-style:none;}
 input,button,select,textarea{outline:none}
 textarea{resize:none}
 /* 添加内阴影 */
-input:-webkit-autofill,select:-webkit-autofill {
+input:-webkit-autofill,select:-webkit-autofill,textarea:-webkit-autofill {
 	-webkit-box-shadow: 0 0 0px 1000px white  inset !important;
 	box-shadow: 0 0 0px 1000px white  inset !important;
 }
@@ -60,7 +60,17 @@ a,img{-webkit-touch-callout: none;}
 
 /* 字根屏幕适配，移动端可以换成flexible.js或rem.js */
 /* 这里设定限制最大了，如果觉得小了可以去掉往上继续添加 */
-@media (min-width: 1200px) {html {font-size: 36px;}}
+@media (min-width: 2200px) {html {font-size: 66px;}}
+@media (max-width: 2200px) {html {font-size: 66px;}}
+@media (max-width: 2100px) {html {font-size: 63px;}}
+@media (max-width: 2000px) {html {font-size: 60px;}}
+@media (max-width: 1900px) {html {font-size: 57px;}}
+@media (max-width: 1800px) {html {font-size: 54px;}}
+@media (max-width: 1700px) {html {font-size: 51px;}}
+@media (max-width: 1600px) {html {font-size: 48px;}}
+@media (max-width: 1500px) {html {font-size: 45px;}}
+@media (max-width: 1400px) {html {font-size: 42px;}}
+@media (max-width: 1300px) {html {font-size: 39px;}}
 @media (max-width: 1200px) {html {font-size: 36px;}}
 @media (max-width: 1100px) {html {font-size: 33px;}}
 @media (max-width: 1000px) {html {font-size: 30px;}}
@@ -72,428 +82,534 @@ a,img{-webkit-touch-callout: none;}
 @media (max-width: 400px) {html {font-size: 12px;}}
 
 /**********面向属性的css begin**********/
-.bsb{
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
+.bsb {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
-.pab{
-	position: absolute;
+.pab {
+  position: absolute;
 }
-.pre{
-	position: relative;
+.pre {
+  position: relative;
 }
-.pfi{
-	position: fixed;
+.pfi {
+  position: fixed;
 }
-.not{
-	top:0;
+.not {
+  top: 0;
 }
-.nob{
-	bottom:0;
+.nob {
+  bottom: 0;
 }
-.nol{
-	left:0;
+.nol {
+  left: 0;
 }
-.nor{
-	right:0;
+.nor {
+  right: 0;
 }
 /* 去掉伪元素，一般伪元素都会设置display，
 所以要加上!important后缀。不然会失效。 */
-.noaf:after{
-	display: none !important;
+.noaf:after {
+  display: none !important;
 }
-.nobe:before{
-	display: none !important;
+.nobe:before {
+  display: none !important;
 }
 /* 元素水平居中 */
-.wauto{
-	/* 块级元素 */
-	margin-right: auto;
-	margin-left: auto;
+.wauto1 {
+  /* 块级元素 */
+  margin-right: auto;
+  margin-left: auto;
 }
-.wauto2{
-	left: 50%;
-	-webkit-transform: translateX(-50%);
-	transform: translateX(-50%);
+.wauto2 {
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
 }
-.wauto3{
-	-webkit-justify-content: center; 
-	justify-content: center;
+.wauto3 {
+  -webkit-justify-content: center;
+  justify-content: center;
 }
 /* 内容垂直居中 */
-.hauto{
-	display: table-cell;
-	vertical-align: middle;
+.hauto1 {
+  display: table-cell;
+  vertical-align: middle;
 }
 /* 元素垂直居中 */
-.hauto2{
-	top: 50%;
-	-webkit-transform: translateY(-50%);
-	transform: translateY(-50%);
+.hauto2 {
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
-.hauto3{
-	-webkit-align-items: center; 
-	align-items: center;
+.hauto3 {
+  -webkit-align-items: center;
+  align-items: center;
 }
 /* 不定高宽元素水平垂直居中 */
-.centre1{
-	position: absolute;
-	bottom: 0;
-	right: 0;
-	left: 0;
-	top: 0;
-	margin: auto;
+.centre1 {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  top: 0;
+  margin: auto;
 }
-.centre2{
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	-webkit-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
+.centre2 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
-.centre3{
-	-webkit-justify-content: center; 
-	justify-content: center;
-	-webkit-align-items: center; 
-	align-items: center;
+.centre3 {
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  align-items: center;
 }
-.fl{
-	float: left;
+.fl {
+  float: left;
 }
-.fr{
-	float: right;
+.fr {
+  float: right;
 }
-.fn{
-	float: none;
+.fn {
+  float: none;
 }
 /* 清除浮动*/
-.fix{
-	*zoom:1;
+.fix:after {
+  display: table;
+  content: '';
+  clear: both;
 }
-.fix:after{
-	display:table;
-	content:'';
-	clear:both;
+.db {
+  display: block;
 }
-.db{
-	display: block;
-}
-.dib{
-	display: inline-block;
+.dib {
+  display: inline-block;
 }
 /*没有间隔的inline-block*/
-.dib2{
-	display: inline-block;
-	font-size: 0;
-	letter-spacing: normal;
-	word-spacing: normal;
-	-webkit-text-size-adjust:none;
+.dib2 {
+  display: inline-block;
+  font-size: 0;
+  letter-spacing: normal;
+  word-spacing: normal;
+  -webkit-text-size-adjust: none;
 }
-.dt{
-	display: table;
+.dt {
+  display: table;
 }
 /* 横向flex */
-.flex{
-	display: flex;
-	-webkit-justify-content: space-between;
-	justify-content: space-between;
+.flex {
+  display: flex;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
 }
 /* 纵向flex(圣杯) */
-.grail{
-	display: flex;
-	flex-direction: column;
-	align-content: space-between;
-	-webkit-justify-content: space-between;
-	justify-content: space-between;
+.grail {
+  display: flex;
+  flex-direction: column;
+  align-content: space-between;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
 }
-.dn{
-	display: none;
+.dn {
+  display: none;
 }
-.fe{
-	flex: 1;
+.fe {
+  flex: 1;
 }
-.w20{
-	width: 20%;
+.w\:20 {
+  width: 20%;
 }
-.w25{
-	width: 25%;
+.w\:25 {
+  width: 25%;
 }
-.w50{
-	width: 50%;
+.w\:50 {
+  width: 50%;
 }
-.w75{
-	width: 75%;
+.w\:75 {
+  width: 75%;
 }
-.w100{
-	width: 100%;
+.w\:100 {
+  width: 100%;
 }
-.h50{
-	height: 50%;
+.h\:50 {
+  height: 50%;
 }
-.h100{
-	height: 100%;
+.h\:100 {
+  height: 100%;
 }
-.wh100{
-	width: 100%;
-	height: 100%;
+.wh\:50 {
+  width: 50%;
+  height: 50%;
+}
+.wh\:100 {
+  width: 100%;
+  height: 100%;
 }
 /* 手机页面最大和最小宽度，pc端更多是响应式，就没有 */
-.h5w{
-	max-width: 750px;
-	min-width: 320px;
+.h5w {
+  max-width: 750px;
+  min-width: 320px;
 }
-.nom{
-	margin: 0;
+.nom {
+  margin: 0;
 }
-.nomt{
-	margin-top: 0;
+.nomt {
+  margin-top: 0;
 }
-.nomr{
-	margin-right: 0;
+.nomr {
+  margin-right: 0;
 }
-.nomb{
-	margin-bottom: 0;
+.nomb {
+  margin-bottom: 0;
 }
-.noml{
-	margin-left: 0;
+.noml {
+  margin-left: 0;
 }
-.nop{
-	padding: 0;
+.nop {
+  padding: 0;
 }
-.nopt{
-	padding-top: 0;
+.nopt {
+  padding-top: 0;
 }
-.nopr{
-	padding-right: 0;
+.nopr {
+  padding-right: 0;
 }
-.nopb{
-	padding-bottom: 0;
+.nopb {
+  padding-bottom: 0;
 }
-.nopl{
-	padding-left: 0;
+.nopl {
+  padding-left: 0;
 }
-.fnm{
-	font-style:normal;
-	font-weight:normal;
-	white-space: normal;
+.fnm {
+  font-style: normal;
+  font-weight: normal;
+  white-space: normal;
 }
-.fb{
-	font-weight:bold;
+.fb {
+  font-weight: bold;
 }
-.fi{
-	font-style:italic;
+.fi {
+  font-style: italic;
 }
 /* 隐藏，占据的空间不受影响，能被阅读设备识别 */
-.pacr{
-	/* 或者搭配fixed */
-	position: absolute;
-	clip: rect(0,0,0,0);
+.pacr {
+  /* 或者搭配fixed */
+  position: absolute;
+  clip: rect(0, 0, 0, 0);
 }
 /* 用于隐藏文字，显示图片 */
 .notext {
-	text-align: left;
-	letter-spacing: -3em;
-	overflow: hidden;
+  text-align: left;
+  letter-spacing: -3em;
+  overflow: hidden;
 }
 .notext:first-letter {
-	margin-left: -20em;
+  margin-left: -20em;
 }
-.tl{
-	text-align: left;
+.tl {
+  text-align: left;
 }
-.tc{
-	text-align: center;
+.tc {
+  text-align: center;
 }
-.tr{
-	text-align: right;
+.tr {
+  text-align: right;
 }
 /* 2端对齐 */
-.tj{
-	font-size: 0;
-	text-align:justify;
-	text-justify: inter-ideograph;
+.tj {
+  font-size: 0;
+  text-align: justify;
+  text-justify: inter-ideograph;
 }
-.tj::after{
-	content: "";
-	display: inline-block;
-	width: 100%;
+.tj::after {
+  content: '';
+  display: inline-block;
+  width: 100%;
 }
-.ttu{
-	text-transform: uppercase;
+.ttu {
+  text-transform: uppercase;
 }
-.ttl{
-	text-transform: lowercase;
+.ttl {
+  text-transform: lowercase;
 }
 /* 单行文字溢出虚点显示，多行的时候再结合其他样式*/
 /* 因为单元格的流动性，使得文字根本就不存在溢出这种说法，需要结合table-layout: fixed使用 */
-.ell{
-	text-overflow:ellipsis;
-	white-space:nowrap;
-	word-wrap: normal;
-	overflow:hidden;
+.ell {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-wrap: normal;
+  overflow: hidden;
 }
-.norp{
-	background-repeat: no-repeat;
+.norp {
+  background-repeat: no-repeat;
 }
-.blurry{
-	color: transparent;
-	text-shadow: 0 0 5px rgba(0,0,0,0.5);
+.blurry {
+  color: transparent;
+  text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 /* 针对单个(背景和图标) */
-.icon{
-	display: inline-block;
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-size: cover;
+.icon {
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
 }
 /* 多个，用于雪碧图 */
-.iconsy{ /* 垂直排列 */
-	background-repeat: no-repeat;
-	background-position-x: 0;
-	background-size: 100% auto;
+.iconsy {
+  /* 垂直排列 */
+  background-repeat: no-repeat;
+  background-position-x: 0;
+  background-size: 100% auto;
 }
-.iconsx{ /* 水平排列 */
-	background-repeat: no-repeat;
-	background-position-y: 0;
-	background-size: auto 100%;
+.iconsx {
+  /* 水平排列 */
+  background-repeat: no-repeat;
+  background-position-y: 0;
+  background-size: auto 100%;
 }
-.contain1{
-	background-size: contain;
+.contain1 {
+  background-size: contain;
 }
 .contain2 {
   -o-object-fit: contain;
-	object-fit: contain;
+  object-fit: contain;
 }
-.cover1{
-	background-size: cover;
+.cover1 {
+  background-size: cover;
 }
 .cover2 {
   -o-object-fit: cover;
-	object-fit: cover; 
+  object-fit: cover;
 }
 
 /* css3过渡动画效果 */
-.trans{
-	-webkit-transition:all 0.3s;	
-	transition:all 0.3s;
+.trans {
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
 }
-.ovh{
-	overflow: hidden;
+.ovh {
+  overflow: hidden;
 }
-.ovv{
-	overflow: visible;
+.ovv {
+  overflow: visible;
 }
-.ovs{
-	overflow: scroll;
+.ovs {
+  overflow: scroll;
 }
-.ovxs{
-	overflow-x: scroll;
-	overflow-y: hidden;
+.ovxs {
+  overflow-x: scroll;
+  overflow-y: hidden;
 }
-.ovys{
-	overflow-x: hidden;
-	overflow-y: scroll;
+.ovys {
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
-.nobd{
-	border: none;
+.nobd {
+  border: none;
 }
-.z5{
-	z-index: 5;
+.z\:5 {
+  z-index: 5;
 }
-.z6{
-	z-index: 6;
+.z\:6 {
+  z-index: 6;
 }
-.z7{
-	z-index: 7;
+.z\:7 {
+  z-index: 7;
 }
-.z8{
-	z-index: 8;
+.z\:8 {
+  z-index: 8;
 }
-.z9{
-	z-index: 9;
+.z\:9 {
+  z-index: 9;
 }
-.z10{
-	z-index: 10;
+.z\:10 {
+  z-index: 10;
 }
-.z50{
-	z-index: 50;
+.z\:50 {
+  z-index: 50;
 }
-.z100{
-	z-index: 100;
+.z\:100 {
+  z-index: 100;
 }
-.z500{
-	z-index: 500;
+.z\:500 {
+  z-index: 500;
 }
-.z1000{
-	z-index: 1000;
+.z\:1000 {
+  z-index: 1000;
 }
-.tsa{
-	-webkit-text-size-adjust: none;
-	text-size-adjust: none;
+.tsa {
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
+}
+.fz\:8 {
+  font-size: 8px;
+}
+.fz\:9 {
+  font-size: 9px;
+}
+.fz\:10 {
+  font-size: 10px;
+}
+.fz\:11 {
+  font-size: 11px;
+}
+.fz\:12 {
+  font-size: 12px;
+}
+.fz\:13 {
+  font-size: 13px;
+}
+.fz\:14 {
+  font-size: 14px;
+}
+.fz\:15 {
+  font-size: 15px;
+}
+.fz\:16 {
+  font-size: 16px;
+}
+.fz\:17 {
+  font-size: 17px;
+}
+.fz\:18 {
+  font-size: 18px;
+}
+.fz\:19 {
+  font-size: 19px;
+}
+.fz\:20 {
+  font-size: 20px;
+}
+.fz\:21 {
+  font-size: 21px;
+}
+.fz\:22 {
+  font-size: 22px;
+}
+.fz\:23 {
+  font-size: 23px;
+}
+.fz\:24 {
+  font-size: 24px;
+}
+.fz\:25 {
+  font-size: 25px;
+}
+.fz\:26 {
+  font-size: 26px;
+}
+.fz\:27 {
+  font-size: 27px;
+}
+.fz\:28 {
+  font-size: 28px;
+}
+.fw\:100 {
+  font-weight: 100;
+}
+.fw\:200 {
+  font-weight: 200;
+}
+.fw\:300 {
+  font-weight: 300;
+}
+.fw\:400 {
+  font-weight: 400;
+}
+.fw\:500 {
+  font-weight: 500;
+}
+.fw\:600 {
+  font-weight: 600;
+}
+.fw\:700 {
+  font-weight: 700;
+}
+.fw\:800 {
+  font-weight: 800;
+}
+.fw\:900 {
+  font-weight: 900;
 }
 /* 一般使用伪类放图标，i表示icon，一般也用<i>展示图标 */
 .ai:after,
 .bi:before {
-	content: '';
-	display: inline-block;
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
+  content: '';
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
-.bgctp{
-	background-color: transparent;
+.bgctp {
+  background-color: transparent;
 }
-.bde{
-	border:1px solid #eee;
+.bde {
+  border: 1px solid #eee;
 }
-.bdc{
-	border:1px solid #ccc;
+.bdc {
+  border: 1px solid #ccc;
 }
-.bdd{
-	border:1px solid #ddd;
+.bdd {
+  border: 1px solid #ddd;
+}
+.ost {
+  -webkit-overflow-scrolling: touch;
+}
+.gpu {
+  transform: translateZ(0);
+}
+/* 禁用事件触发 */
+.pen {
+  pointer-events: none;
 }
 /* 代替br换行 */
-.wsp::after{
-	/* \A表示换行 */
-	content: '\A';
-	white-space: pre;
+.wsp::after {
+  /* \A表示换行 */
+  content: '\A';
+  white-space: pre;
 }
 /* ...动画加载(不适合响应式) */
-.dot{
-	display: inline-block;
-	height: 1em;
-	line-height: 1;
-	text-align: left;
-	vertical-align: -.25em;
-	overflow: hidden;
+.dot1 {
+  display: inline-block;
+  height: 1em;
+  line-height: 1;
+  text-align: left;
+  vertical-align: -0.25em;
+  overflow: hidden;
 }
-.dot::before{
-	display: inline-block;
-	content: '...\A..\A.';
-	white-space: pre-wrap;
-	animation: dot 3s infinite step-start both;
+.dot1::before {
+  display: inline-block;
+  content: '...\A..\A.';
+  white-space: pre-wrap;
+  animation: dot1 3s infinite step-start both;
 }
 /* 主要用于文字加载 */
 .dot2::after {
-	overflow: hidden;
-	display: inline-block;
-	vertical-align: bottom;
-	animation: dot2 2s infinite;
-	content: "\2026"; /* ascii code for the ellipsis character */
+  overflow: hidden;
+  display: inline-block;
+  vertical-align: bottom;
+  animation: dot2 2s infinite;
+  content: '\2026'; /* ascii code for the ellipsis character */
 }
-@keyframes dot{
-	33% { transform: translateY(-2em) }
-	66% { transform: translateY(-1em) }
+@keyframes dot1 {
+  33% {
+    transform: translateY(-2em);
+  }
+  66% {
+    transform: translateY(-1em);
+  }
 }
 @keyframes dot2 {
-	from {
-		width: 2px;
-	}
-	to {
-		width: 15px;
-	}
+  from {
+    width: 2px;
+  }
+  to {
+    width: 15px;
+  }
 }
-
 
 /**
  *	1、ac代表active(激活),in代表invalid(失效)。这2个状态class不能单独使用，
